hard-gists/4abfb80b336a8a56c0a5/run.log
=== Docker Run Log for 4abfb80b336a8a56c0a5 ===
Started at: Mi 29. Okt 15:06:55 CET 2025

[2025-10-29 15:06:56] START: Running container for 4abfb80b336a8a56c0a5
[2025-10-29 15:06:56] SUCCESS: Container 6ecda1dfab26b3f1a90ecdb28a932f0950e25f3cbdd7dac72ec9067e76e80ad5 started for 4abfb80b336a8a56c0a5
=== Container logs for 4abfb80b336a8a56c0a5 ===
  File "/snippet.py", line 127
    print "=" * len(msg)
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4abfb80b336a8a56c0a5 ===
[2025-10-29 15:06:58] INFO: Container 6ecda1dfab26b3f1a90ecdb28a932f0950e25f3cbdd7dac72ec9067e76e80ad5 has stopped
